[package]
name = "pactus-sdk-example"
version = "1.0.0"
edition = "2021"
description = "Pactus SDK Examples in Rust"
authors = ["Pactus Development Team <info@pactus.org>"]
license = "MIT"
homepage = "https://pactus.org"
keywords = ["pactus", "blockchain", "json-rpc", "grpc"]

[dependencies]
pactus-grpc = "1"
pactus-jsonrpc = "1"
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
derive_builder = { version = "0.20" }
jsonrpsee = { version = "0.26.0", features = ["http-client"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"

[[bin]]
name = "grpc_example"
path = "src/grpc_example.rs"

[[bin]]
name = "jsonrpc_example"
path = "src/jsonrpc_example.rs"
